# agentic-ai-bioinformatics

./: README.md
batch_correction/: CLAUDE.md  README.md  batch_correction_agent.py  batch_correction_reflection_agent.py  pyproject.toml  requirements.txt  run_pipeline.py  simulate_data.py
batch_correction/results/batch/: audit_trail.json  correction_report.md
