[project]
name = "batch-correction"
version = "0.1.0"
description = ""
authors = [
    {name = "Riccha Sethi",email = "ricchasethi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scipy (>=1.15.2,<2.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "polars (>=1.29.0,<2.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "umap-learn (>=0.5.9.post2,<0.6.0)",
    "pynndescent (>=0.5.13,<0.6.0)",
    "gseapy (>=1.1.11,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "joblib (>=1.5.2,<2.0.0)",
    "openai (>=2.8.1,<3.0.0)",
    "langgraph (>=0.2.0)",
    "langchain (>=0.3.0)",
    "langchain-anthropic (>=0.3.0)",
    "langchain-core (>=0.3.0)",
    "inmoose (>=0.4.0)",
    "lifelines (>=0.27.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true

[tool.poetry]
package-mode = false